# DebugsprAI

./: .gitignore  PROMPT.md  README.md  action.yml  file_mapping.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_table.yml
.github/workflows/: bugfix.yml
examples/buggybank/: pyproject.toml
examples/buggybank/src/buggybank/: bank.py  main.py
examples/buggybank/test/: test_bank.py
examples/calculator/: pyproject.toml
examples/calculator/src/helloworld/print/: something.py
examples/calculator/tests/: test_calc.py
examples/json-fetcher/: pyproject.toml
examples/json-fetcher/src/jsonfetcher/: fetcher.py  logger.py  main.py  model.py
examples/json-fetcher/tests/: test_fetcher.py
src/aicoder/: foo.py  main.py  models.py  prompt.py
src/debugsprai/: cli.py  core.py  main.py  models.py  parser.py  prompt.py
src/debugspray/: cli.py  core.py  logger.py  main.py  models.py  parser.py  prompt.py
