[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coder"
version = "0.1.0"
description = "AI automated coder for fixing bug based on tickets created"
readme = "README.md"
authors = [
    { name = "afri-bit", email = "afribit.tech@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "openai",
]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "black"]

[project.scripts]
my_script = "my_project.cli:main"
