[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-coder-helloworld"
version = "0.1.0"
description = "Hello World project to test the AI capability of auto bug fix"
readme = "README.md"
authors = [
    { name = "afri-bit", email = "afribit.tech@gmail.com" }
]
license = { file = "LICENSE" }

dependencies = [
    "requests"
]

requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "black"]
all = ["pytest", "black"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
my_script = "my_project.cli:main"
